--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       <canvas id="canvas" width="500" height="700"></canvas>
     </div>
 
+
+    
+    <script src="background.js"></script>
+    <script src="car.js"></script>
+    <script src="game.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
